styles/products_index.scss
main.all-listings {
  max-width: 1500px;

  // Featured Section
  section.featured {
    padding: 0em 1em 0px;
    width: 100%;
    display: flex;
    justify-content: space-around;
    column-gap: 1em;
    flex-wrap: wrap;

    article.featured-listing {
      display: flex;
      flex-direction: column;
      align-items: center;
      text-align: center;
      box-shadow: 2px 2px 5px 1px #7994AF;
      margin: 1em 0em 1em;

      img {
        width: 150px;
        height: 100px;
        border: 2px solid white;
        box-shadow: 2px 2px 2px 1px #7994AF;
      }

      a {
        padding: 0em 0.5em;
        margin-top: 0.5em;
      }
    }
  }

  // Favourite and sort buttons
  div.sorting-buttons {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    align-items: center;
    gap: 2em;
    margin: 5px auto;
    width: 75%;
    min-width: 300px;

    #sortBy {
      max-width: 200px;
    }
  }

  // All listings
  article.listing {
    padding: 1em;
    box-shadow: 2px 2px 5px 1px #7994AF;
    height: auto;
    max-width: 75%;
    min-width: 300px;
    margin: 0 auto;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    margin-bottom: 1em;

    div.listing-contents {
      display: flex;
      flex-direction: column;
      align-items: left;
    }

    img.listing-img {
      max-height: 100%;
      max-width: 100%;
      align-self: center;
    }

    div.listing-details {
      display: flex;
      text-align: left;
      flex-direction: column;
      padding: 1em 0 0 0;

      p {
        margin-top: 0.5em;
        width: 100%;
        text-align: left;
      }
    }
  }

  a {
    font-weight: bold;
  }

  @media (min-width: 1000px) {

    // All listings
    article.listing {
      flex-direction: row;
      min-height: auto;

      div.listing-contents {
        display: flex;
        flex-direction: row;
        align-items: left;
      }

      img.listing-img {
        max-height: 100%;
        max-width: 400px;
        align-self: left;
        border: 2px solid white;
        box-shadow: 2px 2px 5px 1px #7994AF;
      }

      div.listing-details {
        padding: 0 0 0 1em;
      }
    }
  }
}

